fix: :lipstick: #74, Fix alignment of super indexes in table component
Reduce the top property to -0.4em and add left property as 1px, global change

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -5,7 +5,8 @@ $headRowsWidth: 16%;
 
     sup {
         font-size: 65%;
-        top: -0.6em;
+        top: -0.4em;
+        left: .0625rem;
     }
 
     &__title {
